Fri Apr 04 03:07:05 BST 2003  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Use "using namespace std;"; removed stray cout
	  debug line.

Wed Apr 02 16:54:50 BST 2003  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: More Sun C++ fixes.
	* PLATFORMS: Updated.

Wed Apr 02 16:39:48 BST 2003  Olly Betts <olly@survex.com>

	* tests/api_db.cc,net/tcpserver.cc,common/tcpserver.h: More Sun C++
	  fettling.

Wed Apr 02 15:42:54 BST 2003  Olly Betts <olly@survex.com>

	* matcher/emptymatch.h,tests/api_db.cc: More fixes for Sun C++.

Wed Apr 02 15:13:58 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/omqueryinternal.cc,
	  backends/inmemory/inmemory_database.h,common/document.h,
	  common/netclient.h,common/netserver.h,common/networkstats.h,
	  common/omlinebuf.h,common/stats.h,include/om/omerror.h,
	  include/om/omerrorhandler.h,indexer/indexgraph/nodetest.cc,
	  indexer/indexgraph/omindexerbuilder.cc,
	  indexer/indexgraph/omindexerinternal.h,
	  indexer/indexgraph/omstopwordnode.cc,
	  indexer/indexgraph/regexcommon.h,indexer/indexgraph/toposort.h,
	  tests/api_db.cc,tests/api_nodb.cc,testsuite/backendmanager.h:
	  More fixes for Sun C++; removed many superfluous ";" after "}".

Wed Apr 02 03:45:42 BST 2003  Olly Betts <olly@survex.com>

	* api/omdocument.cc,api/omenquire.cc,api/omtermlistiteratorinternal.h,
	  backends/inmemory/inmemory_database.h,backends/quartz/btree.cc,
	  backends/quartz/btree.h,common/alltermslist.h,common/expandweight.h,
	  common/getopt.h,common/utils.h,include/om/omenquire.h,
	  matcher/expandweight.cc,matcher/multimatch.cc,
	  testsuite/backendmanager.h: Resolved various issues so that
	  libxapian now builds with Sun's C++ compiler.  However
	  libomqueryparser and the test programs don't yet.

Tue Apr 01 02:52:57 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_types.h: use "unsigned int" rather than
	  "unsigned long int" so that quartz_tablesize_t matches om_doccount
	  on 64 bit machines.
